[project]
name = "flashdepth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "mamba-ssm",
    "matplotlib>=3.10.7",
    "opencv-python>=4.11.0.86",
    "openexr>=3.4.3",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
    "xformers==0.0.27.post2",
]

[tool.uv.workspace]
members = [
    "mamba",
]

[tool.uv.sources]
mamba-ssm = { workspace = true }
